# marrow

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
marrow/: cli.py  config.py  database.py  mcp_server.py  utils.py
tests/: conftest.py  test_database.py  test_mcp_server.py
